--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,4 @@
 @import "./styles/design-system.css";
+@import "./styles/auth.css";
+@import "./styles/components.css";
 @import "./styles/enhanced-ui.css";
